# pyvot

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
pyvot/: main.py  olap.py
pyvot/static/: bolt.css  styles.css
pyvot/templates/: index.html
pyvot/templates/fragments/: body.html  controls.html  head.html  table.html
scripts/: install.py
